[gd_scene load_steps=10 format=3 uid="uid://dj2gvh7uw53s3"]

[ext_resource type="Script" uid="uid://dkn6sbqe3f8iv" path="res://PlayScene/play_scene.gd" id="1_vfcvm"]
[ext_resource type="PackedScene" uid="uid://2j1ltrvfhf02" path="res://Player/player.tscn" id="2_feovp"]
[ext_resource type="PackedScene" uid="uid://66ywt3udtw03" path="res://LevelGenerator/level_generator.tscn" id="4_d45jc"]
[ext_resource type="Script" uid="uid://wypne74yk38y" path="res://PlayScene/label.gd" id="4_t8b1b"]
[ext_resource type="PackedScene" uid="uid://f56013n24gjy" path="res://PauseMenu/pause_menu.tscn" id="7_efgr1"]
[ext_resource type="FontFile" uid="uid://dtiujgu3wn57w" path="res://4all/Pixeled.ttf" id="7_t8b1b"]
[ext_resource type="PackedScene" uid="uid://bl8ldvwumudpw" path="res://AudienceEnemySpawner/audience_enemy_spawner.tscn" id="8_t8b1b"]
[ext_resource type="PackedScene" uid="uid://nd3ktiqluxoo" path="res://PlayerUI/player_ui.tscn" id="9_2amxo"]

[sub_resource type="LabelSettings" id="LabelSettings_2amxo"]
font = ExtResource("7_t8b1b")
font_size = 30

[node name="PlayScene" type="Node2D"]
script = ExtResource("1_vfcvm")
metadata/_edit_horizontal_guides_ = [192.0]

[node name="PlayerUI" parent="." instance=ExtResource("9_2amxo")]
player_path = NodePath("../Player")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlackOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GameTitle" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -42.0
offset_right = 60.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
text = "4ALL"
label_settings = SubResource("LabelSettings_2amxo")

[node name="PauseMenu" parent="." instance=ExtResource("7_efgr1")]

[node name="LevelGenerator" parent="." instance=ExtResource("4_d45jc")]

[node name="Player" parent="." instance=ExtResource("2_feovp")]
position = Vector2(38, 166)
scale = Vector2(0.32, 0.32)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="Label" type="Label" parent="CanvasLayer2"]
offset_left = 96.0
offset_top = 10.0
offset_right = 136.0
offset_bottom = 33.0
script = ExtResource("4_t8b1b")

[node name="AudienceEnemySpawner" parent="." instance=ExtResource("8_t8b1b")]
